# zim-librarian

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/app-tauri/: Cargo.toml  tauri.conf.json
crates/app-tauri/icons/: icon.icns
crates/app-tauri/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: chats.rs  engine.rs  index.rs  lib.rs  library.rs  llama.rs  text.rs
crates/librarian/: Cargo.toml
crates/librarian/src/: main.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: lib.rs
crates/zimlib/: Cargo.toml
crates/zimlib/examples/: inspect.rs
crates/zimlib/src/: lib.rs
docs/: PLAN.md  RELEASING.md
docs/site/: _config.yml  index.md  privacy.md  support.md
docs/superpowers/plans/: 2026-07-13-app-store-launch.md
docs/superpowers/specs/: 2026-07-13-app-store-launch-design.md
scripts/: fetch-model.sh  fetch-testdata.sh
ui/: app.js  index.html  style.css
