# Native desktop/mobile shell. Deliberately its own workspace: the Tauri
# dependency tree is large, and the core workspace must stay fast to build.
[package]
name = "zim-librarian"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace]

# The library form is what mobile builds link against (staticlib on iOS,
# cdylib on Android); desktop keeps using the thin main.rs binary.
[lib]
name = "zim_librarian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread"] }
librarian-core = { path = "../core" }
librarian-server = { path = "../server" }

[features]
default = ["llama"]
llama = ["librarian-core/llama", "librarian-server/llama"]
