[package]
name = "librarian-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
zimlib = { path = "../zimlib" }
tantivy = "0.22"
dirs = "5"
encoding_rs = { version = "0.8.35", optional = true }
pdf-extract = "0.12.0"

[features]
default = []
llama = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dev-dependencies]
tempfile = "3.27.0"

[dependencies.llama-cpp-2]
version = "0.1"
optional = true
